--- a/docs/_includes/title.html
+++ b/docs/_includes/title.html
@@ -1,5 +1,5 @@
 {% if site.logo %}
-    <div class="site-logo">{{ site.title }}</div>
+    <div class="site-logo"></div> {{ site.title }}
 {% else %}
     {{ site.title }}
 {% endif %}
