--- a/docs/_includes/title.html
+++ b/docs/_includes/title.html
@@ -1,5 +1,5 @@
 {% if site.logo %}
-    <div class="site-logo ml-8"></div><div class="mr-8">{{ site.title }}</div>
+    <div class="site-logo ml-8"></div>&nbsp;<div class="mr-8">{{ site.title }}</div>
 {% else %}
     {{ site.title }}
 {% endif %}
