--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -67,6 +67,7 @@ layout: table_wrappers
         </nav>
         <footer class="site-footer">
             <!--This site uses <a href="https://github.com/just-the-docs/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.-->
+            Copyright &copy; 2022
         </footer>
     </div>
     <div class="main" id="top">
