--- a/docs/_sass/color_schemes/dark.scss
+++ b/docs/_sass/color_schemes/dark.scss
@@ -4,12 +4,14 @@
 
 $body-background-color: $grey-dk-250;
 $sidebar-color: $grey-dk-250;
+$border-color: $grey-dk-200;
+
 // $search-background-color: $white !default;
 // $table-background-color: $white !default;
 // $code-background-color: $grey-lt-000 !default;
 // $feedback-color: darken($sidebar-color, 3%) !default;
 
-// $body-text-color: $grey-dk-100 !default;
+$body-text-color: $grey-lt-100;
 // $body-heading-color: $grey-dk-300 !default;
 // $search-result-preview-color: $grey-dk-000 !default;
 // $nav-child-link-color: $grey-dk-100 !default;
