--- a/docs/_sass/color_schemes/dark.scss
+++ b/docs/_sass/color_schemes/dark.scss
@@ -12,9 +12,9 @@ $border-color: $grey-dk-200;
 // $feedback-color: darken($sidebar-color, 3%) !default;
 
 $body-text-color: $grey-lt-100;
-// $body-heading-color: $grey-dk-300 !default;
-// $search-result-preview-color: $grey-dk-000 !default;
-// $nav-child-link-color: $grey-dk-100 !default;
-// $link-color: $blue-000;
+$body-heading-color: $grey-lt-000;
+$search-result-preview-color: $grey-lt-000;
+$nav-child-link-color: $grey-dk-000;
+$link-color: $blue-000;
 // $btn-primary-color: $purple-100 !default;
 // $base-button-color: #f7f7f7 !default;
