--- a/docs/_sass/color_schemes/dark.scss
+++ b/docs/_sass/color_schemes/dark.scss
@@ -16,5 +16,5 @@ $body-heading-color: $grey-lt-000;
 $search-result-preview-color: $grey-lt-000;
 $nav-child-link-color: $grey-dk-000;
 $link-color: $blue-000;
-// $btn-primary-color: $purple-100 !default;
-// $base-button-color: #f7f7f7 !default;
+$btn-primary-color: $blue-200;
+$base-button-color: $grey-dk-250;
