--- a/docs/_sass/color_schemes/dark.scss
+++ b/docs/_sass/color_schemes/dark.scss
@@ -17,8 +17,8 @@ $search-result-preview-color: $grey-lt-000;
 $table-background-color: $grey-dk-250;
 
 $nav-child-link-color: $grey-dk-000;
-$link-color: $blue-000;
-$btn-primary-color: $blue-200;
+$link-color: $green-100;
+$btn-primary-color: $green-200;
 $base-button-color: $grey-dk-250;
 
 $code-background-color: $grey-dk-200;
