--- a/docs/_sass/color_schemes/dark.scss
+++ b/docs/_sass/color_schemes/dark.scss
@@ -7,7 +7,7 @@ $body-background-color: $grey-dk-300;
 $body-text-color: $grey-lt-100;
 
 $sidebar-color: $grey-dk-300;
-$feedback-color: darken($sidebar-color, 5%);
+$feedback-color: lighten($sidebar-color, 5%);
 
 $border-color: $grey-dk-200;
 
@@ -17,7 +17,7 @@ $search-result-preview-color: $grey-lt-000;
 $table-background-color: $grey-dk-250;
 
 $nav-child-link-color: $grey-dk-000;
-$link-color: $green-100;
+$link-color: $green-000;
 $btn-primary-color: $green-200;
 $base-button-color: $grey-dk-250;
 
